--- a/_templates/default.html
+++ b/_templates/default.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-	<iframe src="https://en.wikipedia.org/wiki/HTML_element#Frames"
+	<iframe src="https://www.producthunt.com/upcoming/notary-do"
 			frameborder="0"
 			marginheight="0"
 			marginwidth="0"
